Replace usage of Paths.get() with Path.of()