@@ -2,7 +2,6 @@ package ng.maven;
 
 import java.nio.file.Files;
 import java.nio.file.Path;
-import java.nio.file.Paths;
 
 import org.apache.maven.project.MavenProject;
 
@@ -22,15 +21,15 @@ public class PackageWOFramework {
 		// FIXME: Flatten resources (?)  // Hugi 2021-07-10
 		// FIXME: Both of the above happen in some logic common to both the .WOA and the .framework packaging // Hugi 2021-07-10
 
-		Util.copyContentsOfFolderAtPathToFolderInJar( Paths.get( mavenProject.getBasedir() + "/src/main/components" ), "Resources", artifactPath );
+		Util.copyContentsOfFolderAtPathToFolderInJar( Path.of( mavenProject.getBasedir() + "/src/main/components" ), "Resources", artifactPath );
 
-		final Path resourcesSourcePath = Paths.get( mavenProject.getBasedir() + "/src/main/" + woresourcesFolderName );
+		final Path resourcesSourcePath = Path.of( mavenProject.getBasedir() + "/src/main/" + woresourcesFolderName );
 
 		// FIXME: Should be totally OK for this not to exist. Check in the WOA build as well, check for WebsServerResources and Components as well // Hugi 2021-07-10
 		if( Files.exists( resourcesSourcePath ) ) {
 			Util.copyContentsOfFolderAtPathToFolderInJar( resourcesSourcePath, "Resources", artifactPath );
 		}
 
-		Util.copyContentsOfFolderAtPathToFolderInJar( Paths.get( mavenProject.getBasedir() + "/src/main/webserver-resources" ), "WebServerResources", artifactPath );
+		Util.copyContentsOfFolderAtPathToFolderInJar( Path.of( mavenProject.getBasedir() + "/src/main/webserver-resources" ), "WebServerResources", artifactPath );
 	}
 }
